LacLog 基类修改