@@ -15,7 +15,7 @@ public class Object2List extends Castor<Object, List> {
     public List cast(Object src, Class<?> toType, String... args) throws FailToCastObjectException {
         try {
             List<Object> list = (List<Object>) (toType == List.class ? new ArrayList<Object>(1)
-                                                                    : toType.newInstance());
+                                                                    : toType.getDeclaredConstructor().newInstance());
             list.add(src);
             return list;
         }
